--- a/speech-therapist.html
+++ b/speech-therapist.html
@@ -50,7 +50,7 @@
 <p><span class="badge badge-light">Columbia, MS</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/HSMC1/743999698307093-speech-language-pathologist-slp-'>HSMC Speech-Language Pathologist (SLP) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/HSMC1/743999698307093-speech-language-pathologist-slp-'>HSMC Speech-Language Pathologist (SLP) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -62,7 +62,7 @@
 <p><span class="badge badge-light">Mount Airy, MD</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cortica/jobs/4498853002'>Job Application for Clinical Director of Speech Therapy at Cortica</a></h5> 
+<h5><a href='https://boards.greenhouse.io/cortica/jobs/4498853002'>Job Application for Clinical Director of Speech Therapy at Cortica</a></h5> 
 <p><span class="badge badge-light">Glendale, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -86,7 +86,7 @@
 <p><span class="badge badge-light">Miami, FL</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cortica/jobs/4495768002'>Job Application for Speech Language Pathologist Assistant at Cortica</a></h5> 
+<h5><a href='https://boards.greenhouse.io/cortica/jobs/4495768002'>Job Application for Speech Language Pathologist Assistant at Cortica</a></h5> 
 <p><span class="badge badge-light">Torrance, CA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -106,7 +106,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PhoenixHomeCare1/743999698192853-home-health-speech-therapist-prn-'>Phoenix Home Care Home Health Speech Therapist (PRN) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PhoenixHomeCare1/743999698192853-home-health-speech-therapist-prn-'>Phoenix Home Care Home Health Speech Therapist (PRN) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Columbia, MO, USA</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -122,7 +122,7 @@
 <p><span class="badge badge-light">Miami, FL</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/medsidehealthcare/jobs/prn-speech-language-pathologist-cobb-or-dekalb-county-cnf9VE9ECr6AHLaKjNoogA'>PRN Speech Language Pathologist - (Cobb or Dekalb County) #1191 job at MedSide Healthcare in Atlanta, GA, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/medsidehealthcare/jobs/prn-speech-language-pathologist-cobb-or-dekalb-county-cnf9VE9ECr6AHLaKjNoogA'>PRN Speech Language Pathologist - (Cobb or Dekalb County) #1191 job at MedSide Healthcare in Atlanta, GA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Atlanta, GAAtlanta, GA</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -163,7 +163,7 @@ Language Pathologists to work Full-Time for our Skilled Nursing Facility in?...<
 <p><span class="badge badge-light">Richmond</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/kidscare-home-health/job/oC1C4fw3'>KidsCare Home Health Careers - Bilingual Pediatric Speech and Language Pathologist</a></h5> 
+<h5><a href='https://jobs.jobvite.com/kidscare-home-health/job/oC1C4fw3'>KidsCare Home Health Careers - Bilingual Pediatric Speech and Language Pathologist</a></h5> 
 <p><span class="badge badge-light">Fort Worth, TX</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -183,7 +183,7 @@ Language Pathologists to work Full-Time for our Skilled Nursing Facility in?...<
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://www.monroeconsulting.com/job/Malaysia/Speech-and-Swallowing-Therapist/31570'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.monroeconsulting.com/job/Malaysia/Speech-and-Swallowing-Therapist/31570'>
 	Speech and Swallowing Therapist | Monroe Consulting Group
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -210,7 +210,7 @@ Gadsden. Setting: SNF. Discipline: SLP-CFY. Status: Full Time?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/northwest-center/job/ozoibfwa'>Northwest Center Careers - Speech Language Pathologist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/northwest-center/job/ozoibfwa'>Northwest Center Careers - Speech Language Pathologist</a></h5> 
 <p><span class="badge badge-light">Seattle, Washington</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -329,7 +329,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/northwest-center/job/ozoibfwa'>Northwest Center Careers - Speech Language Pathologist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/northwest-center/job/ozoibfwa'>Northwest Center Careers - Speech Language Pathologist</a></h5> 
 <p><span class="badge badge-light">Seattle, Washington</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -341,7 +341,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light">SAN ANTONIO, TEXAS</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/bluesprigpediatrics/529dd092-1fa6-4ab5-82dd-7ba1fe4a8b65'>BlueSprig - Speech Language Pathologist Assistant (SLPA) (Northwest Houston, Katy, and Stafford)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bluesprigpediatrics/529dd092-1fa6-4ab5-82dd-7ba1fe4a8b65'>BlueSprig - Speech Language Pathologist Assistant (SLPA) (Northwest Houston, Katy, and Stafford)</a></h5> 
 <p><span class="badge badge-light">Katy, TX</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -419,7 +419,7 @@ Speech-Pathologist Needed immediately - full time position in Garden City, from 
 <p><span class="badge badge-light">Carrollton, TX</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://breakthroughbehavior.applytojob.com/apply/urlzQZjsrx/Speech-Therapy-Support-Assistant-RDV-Clinic'>Speech Therapy Support Assistant - RDV Clinic - Breakthrough Behavior - Career Page</a></h5> 
+<h5><a href='http://breakthroughbehavior.applytojob.com/apply/urlzQZjsrx/Speech-Therapy-Support-Assistant-RDV-Clinic'>Speech Therapy Support Assistant - RDV Clinic - Breakthrough Behavior - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
@@ -435,7 +435,7 @@ Speech-Pathologist Needed immediately - full time position in Garden City, from 
 <p><span class="badge badge-light">St. Augustine, FL</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/medsidehealthcare/jobs/speech-language-pathologist-prn-in-dekalb-county-dA8-ae5vGr6BHaaKiznY58'>Speech Language Pathologist - (PRN in Dekalb County) #1159 job at MedSide Healthcare in Atlanta, GA, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/medsidehealthcare/jobs/speech-language-pathologist-prn-in-dekalb-county-dA8-ae5vGr6BHaaKiznY58'>Speech Language Pathologist - (PRN in Dekalb County) #1159 job at MedSide Healthcare in Atlanta, GA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Atlanta, GAAtlanta, GA</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
